[package]
name = "dataengineering"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
publish = false

[profile.release]
strip = true

[dependencies]
clap = { version = "3", features = ["derive"] }
thiserror = "1"
datafusion = "8"
tokio = "1"
log = "0.4"
env_logger = "0.9.0"

[dev-dependencies]
fake = { version = "2.4", features = ['derive'] }
tempfile = "3.3.0"
rand = "0.8"
assert_cmd = "2"
